need newish perl

--- a/dist.ini
+++ b/dist.ini
@@ -5,3 +5,5 @@ copyright_holder = Ricardo Signes
 copyright_year   = 2015
 
 [@RJBS]
+[Prereqs]
+perl = 5.016 ; new enough unicode -- later, we will want 5.22.0 for U+1F641
