update dist.ini for new metadata

--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,11 @@
 name    = Text-SlackEmoji
-author  = Ricardo Signes <rjbs@cpan.org>
+author  = Ricardo Signes <rjbs@semiotic.systems>
 license = Perl_5
 copyright_holder = Ricardo Signes
 copyright_year   = 2015
 
 [@RJBS]
+perl-window = standard
+
 [Prereqs]
 perl = 5.012 ; new enough unicode -- but later unicode gets more chars loaded
