--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Text-SlackEmoji
-author  = Ricardo Signes <rjbs@semiotic.systems>
+author  = Ricardo Signes <cpan@semiotic.systems>
 license = Perl_5
 copyright_holder = Ricardo Signes
 copyright_year   = 2015
